--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   :root {
     --background: 222.2 30% 98%;
     --foreground: 222.2 84% 4.9%;
+    --hexagon: 211, 30%, 43%;
+    --hexagon-foreground: 211, 30%, 65%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
@@ -28,7 +30,7 @@
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
+    --chart-5: 211, 30%, 43%;
   }
 
   .dark {
@@ -55,7 +57,7 @@
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
+    --chart-5: 211, 30%, 43%;
   }
 }
 
