mods-sin-mobile-ver-rota-a-fixear

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,8 @@
     --foreground: 222.2 84% 4.9%;
     --hexagon: 211, 30%, 43%;
     --hexagon-foreground: 211, 30%, 53%;
+    --bgsection: 212, 31%, 77%;
+    --bgsection-foreground: 212, 31%, 77%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
