--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,20 +78,28 @@
   }
 }
 
-.bg-custom {
+/* Customs */
+
+.bg-contact {
   @apply bg-cover bg-center; /* Opcional: para cubrir y centrar la imagen */
   background-image: url("/fondos/fondo-pie.png");
 }
 
+.animate-bounce-smooth {
+  animation: bounce-smooth 2.5s ease-in-out infinite;
+}
+
+.shadow-box {
+  /* background-color: #ffffff; */
+  box-shadow: 45px 45px 0 0 rgba(53, 128, 208, 0.12);
+}
+
 @keyframes bounce-smooth {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(0);
   }
   50% {
-    transform: translateY(-10px); /* Ajusta el rango a tu preferencia */
+    transform: translateY(-10px);
   }
-}
-
-.animate-bounce-smooth {
-  animation: bounce-smooth 2.5s ease-in-out infinite;
 }
