--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,8 @@
   .dark {
     --background: 228, 13%, 10%;
     --foreground: 210 40% 98%;
+    --hexagon: 210, 35%, 79%;
+    --hexagon-foreground: 210, 35%, 89%;
     --card: 228, 13%, 9%;
     --card-foreground: 210 40% 98%;
     --popover: 228, 13%, 9%;
